syntax = "proto3";

package rag.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/knoguchi/rag/gen/rag/v1;ragv1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "RAG Document API"
    version: "1.0"
    description: "Multi-tenant RAG service - Document management"
  }
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
};

// DocumentService manages document ingestion and retrieval
service DocumentService {
  // IngestDocument ingests raw text content
  rpc IngestDocument(IngestDocumentRequest) returns (IngestDocumentResponse) {
    option (google.api.http) = {
      post: "/v1/documents/ingest"
      body: "*"
    };
  }

  // IngestURL fetches and ingests content from a URL
  rpc IngestURL(IngestURLRequest) returns (IngestDocumentResponse) {
    option (google.api.http) = {
      post: "/v1/documents/ingest-url"
      body: "*"
    };
  }

  // GetDocument retrieves a document by ID
  rpc GetDocument(GetDocumentRequest) returns (Document) {
    option (google.api.http) = {
      get: "/v1/documents/{id}"
    };
  }

  // ListDocuments lists documents for a tenant
  rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse) {
    option (google.api.http) = {
      get: "/v1/documents"
    };
  }

  // DeleteDocument deletes a document and its chunks
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse) {
    option (google.api.http) = {
      delete: "/v1/documents/{id}"
    };
  }

  // GetDocumentChunks retrieves chunks for a document
  rpc GetDocumentChunks(GetDocumentChunksRequest) returns (GetDocumentChunksResponse) {
    option (google.api.http) = {
      get: "/v1/documents/{document_id}/chunks"
    };
  }
}

// Document represents an ingested document
message Document {
  string id = 1;
  string tenant_id = 2;
  string source = 3;              // URL or filename
  string title = 4;
  string content_hash = 5;        // SHA256 hash for deduplication
  int32 chunk_count = 6;
  DocumentStatus status = 7;
  string error_message = 8;       // Error details if status is FAILED
  map<string, string> metadata = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// DocumentStatus represents the processing status of a document
enum DocumentStatus {
  DOCUMENT_STATUS_UNSPECIFIED = 0;
  DOCUMENT_STATUS_PENDING = 1;
  DOCUMENT_STATUS_PROCESSING = 2;
  DOCUMENT_STATUS_READY = 3;
  DOCUMENT_STATUS_FAILED = 4;
}

// DocumentChunk represents a chunk of a document
message DocumentChunk {
  string id = 1;
  string document_id = 2;
  int32 chunk_index = 3;
  string content = 4;
  map<string, string> metadata = 5;
  google.protobuf.Timestamp created_at = 6;
}

message IngestDocumentRequest {
  string tenant_id = 1;
  string content = 2;             // Raw text content
  string title = 3;               // Optional title
  string source = 4;              // Optional source identifier
  map<string, string> metadata = 5;
}

message IngestURLRequest {
  string tenant_id = 1;
  string url = 2;
  bool use_headless = 3;          // Use headless browser for JS-heavy sites
  map<string, string> metadata = 4;
}

message IngestDocumentResponse {
  string document_id = 1;
  DocumentStatus status = 2;
}

message GetDocumentRequest {
  string id = 1;
}

message ListDocumentsRequest {
  string tenant_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  DocumentStatus status_filter = 4;  // Optional filter by status
}

message ListDocumentsResponse {
  repeated Document documents = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message DeleteDocumentRequest {
  string id = 1;
}

message DeleteDocumentResponse {
  bool success = 1;
}

message GetDocumentChunksRequest {
  string document_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message GetDocumentChunksResponse {
  repeated DocumentChunk chunks = 1;
  string next_page_token = 2;
}
